# ai-compliance-mvp

./: .build.swp  .dockerignore  .gitignore  Dockerfile  README.md  app.py  compliance_app_fixed.py  crew_setup.py  docker-compose.yml  docker-compose.yml.bak  pyproject.toml  requirements.txt  streamlit_compliance.py
agents/: __init__.py  compliance.py  devops.py  explorer.py  planner.py  reviewer.py  test_writer.py
analysis/: __init__.py  governance.py  repo_scanner.py  report_builder.py  risk_classifier.py  runner.py  scorecard.py  trivy_scan.py
analysis/repo_scan/: __init__.py  clone.py  sbom.py
docs/templates/: POLICY.md.j2
ml/: risk.py
tools/: compliance_tools.py  docker_mcp.py  github_mcp.py  manus.py  shell.py
utils/: cost_logger.py  groq_llm.py
workflows/: ci.yml
