[tool.poetry]
name = "devagent-mcp"
version = "0.1.0"
description = "Demo multi‑agent pipeline usando CrewAI + MCP"
authors = ["Seu Nome <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
crewai = "^0.114.0"
crewai-tools = "*"
openai = "^1.15.0"
chromadb = "^0.5.0"
scikit-learn = "^1.5.0"
langchain = "^0.2.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"